Delete unused colors, change primary and reimplemented toast function as alert

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -22,8 +22,7 @@
 }
 
 .dark {
-  --primary: 0 0 100%;
-  --secondary: var(--outline);
+  --primary: 256 100% 77%;
   --background: 213 4% 11%;
   --on-background: 0 0% 93%;
   --outline: 0 0% 24%;
@@ -32,8 +31,7 @@
 }
 
 .light {
-  --primary: 0 0 0%;
-  --secondary: var(--outline);
+  --primary: 256 100% 77%;
   --background: 212 24% 96%;
   --on-background: 0 0% 9%;
   --outline: 0 0% 76%;
